samples/_failures_safe/1761306968_ee2f7e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c228f025.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_c228f025.c:149:27: error: expected ‘]’ at end of input
  149 |         return names[state
      |                           ^
      |                           ]
./samples/SAFE/__tmp_c228f025.c:149:9: error: expected declaration or statement at end of input
  149 |         return names[state
      |         ^~~~~~
./samples/SAFE/__tmp_c228f025.c:149:9: error: expected declaration or statement at end of input
